components/Layout/Layout.module.css
.container {
  font-family: -apple-system, BlinkMacSystemFont, sans-serif;
  font-family: monospace;

  width: 100vw;
  min-height: 100vh;
  background-color: #0d0d0d;
  color: white;

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  position: relative;
  overflow: hidden;
}

.gradTop {
  position: absolute;
  top: 8%;
  right: -5%;
  transform: scale(1.5);
  transition: ease-in 0.5s;
  z-index: 0;
}

.gradBtm {
  position: absolute;
  bottom: 5%;
  left: -12%;
  transform: scale(1.5) rotate(-150deg);
  transition: ease-in 0.5s;

  z-index: 0;
}

@media screen and (max-width: 768px) {
  .gradTop {
    scale: 0.8;
  }
  .gradBtm {
    transform: scale(0.8) rotate(-150deg);
  }
}

